# etl_repo_v1_1_1

./: .gitignore  AGENTS.md  README.md  onboarding_p1.1.md  pyproject.toml
cleanup/: cleanup_resources.py
config/pipelines/: boston_star_flex_template_metadata.json
data/: etl_boston_star_p1_pipeline.json
dataflow/star_schema/: boston_star_pipeline.py
docker/: Dockerfile.dataflow  Dockerfile.dev
pipelines/: etl_boston_star_p1_pipeline.py
scripts/: build_boston_star_flex_template.sh  cleanup.sh  run_flex_template.sh  run_local_dataflow.sh  setup.sh  submit_etl_boston_star_p1_pipeline.sh
